demo-4/python-app-ingress-v2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: python-app
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee
          servicePort: 80
